apps/probadiess/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: probadiess-web
  namespace: probadiess
  labels:
    app.kubernetes.io/name: probadiess-web
spec:
  selector:
    app.kubernetes.io/name: probadiess-web
  ports:
    - name: http
      port: 80
      targetPort: http
